--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,10 @@ spring:
   datasource:
     generate-unique-name: false
     name: tacocloud
-  cassandra:
-    keyspace-name: taco_cloud
-    schema-action: recreate
-    local-datacenter: datacenter1
-    username: user
-    password: pass
+  data:
+    mongodb:
+      host: mongodb.tacocloud.com
+      port: 27017
+      username: tacocloud
+      password: 1234
+      database: tacoclouddb
